--- a/connection_rate_tester/src/main/res/values/strings.xml
+++ b/connection_rate_tester/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="mobile_internet_not_connected">Mobile internet is not connected. Please, retry</string>
     <string name="default_error_message">Cannot connect to server. Please, retry</string>
     <string name="measurement_started">%1$s rate measurement started</string>
-    <string name="rate_message">%1$s rate is rate : %2$f</string>
+    <string name="rate_message">%1$s rate is rate : %2$f%3$s</string>
 </resources>
